Fix overlap on filter and datepicker

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,7 @@
 * {
   scroll-behavior: smooth;
 }
+
+.react-datepicker-popper {
+  z-index: 50 !important;
+}
